@@ -49,7 +49,8 @@ Check error page</label>)</p>
 <p><input type="submit"></p>
 </form>
 
-<p><a href="cc-todo">TODO</a></p>
+<p><a href="cc-todo">TODO</a>,
+<a href="standards">Supported standards</a></p>
 
 </body>
 </html>
