@@ -1,0 +1,61 @@
+<!DOCTYPE HTML>
+<html lang=en>
+<head>
+<title>Standards Supported by Web Documenet Conformance Checker</title>
+<link rel=stylesheet href=cc-style>
+</head>
+<body>
+<h1>Standards Supported by Web Document Conformance Checker</h1>
+
+<div class=section id=summary>
+<h2>Summary</h2>
+
+<table>
+<thead>
+<tr><th scope=col>Standard<th scope=col>Version<th scope=col>Note
+</thead>
+<tbody>
+<tr><th scope=row><a href="#html"><abbr title="Hypertext Markup Language">HTML</abbr></a>
+<td><a href="http://whatwg.org/html5">5 (Editor's Draft)</a>
+<td>Partially
+<tr><th scope=row><a href="#atom">Atom</a>
+<td><abbr>RFC</abbr></td>
+<td>Partially
+<tr><th scope=row rowspan=2><abbr title="Extensible Markup Language">XML</abbr>
+<td>1.0 Fourth Edition
+<td>Tentative
+<tr><td>1.1 Second Edition
+<td>Tentative
+<tr><th scope=row rowspan=2><abbr title="Extensible Markup Language">XML</abbr>
+Namespaces
+<td>1.0 Second Edition
+<td>Tentative
+<tr><td>1.1 First Edition
+<td>Tentative
+</tbody>
+<tbody>
+<tr><th scope=row><abbr title="Hypertext Transfer Protocol">HTTP</abbr>
+<td>
+<td>Tentative (no validation)
+</tbody>
+</table>
+</div>
+
+<div class=section id=html>
+<h2><abbr title="Hypertext Markup Language">HTML</abbr></h2>
+
+<p>Restrictions:</p>
+<ul>
+  <li>December 2007 content model is not implemented yet.</li>
+  <li>Form elements are not implemented yet.</li>
+</ul>
+</div>
+
+<div class=section id=atom>
+<h2>Atom</h2>
+
+<p>Only a part is implemented.</p>
+</div>
+
+</body>
+</html>
